2007-09-22 Samuel Abels <http://debain.org>

	* lib/Exscript/String.py: It is now possible to use \r and \n in strings.
	* lib/Exscript/ExpressionNode.py: Strings may now be concatenated using the
	"." operator.
	* lib/Exscript/Code.py, lib/Exscript/ExpressionNode.py: Added "in" and "not
	in" operators for searching through a list.

2007-09-21 Samuel Abels <http://debain.org>

	* lib/Exscript/Execute.py, lib/Exscript/Token.py, lib/Exscript/String.py:
	Fixed a bug that escaping of some characters outside of code context did not
	work.
	Fixed another bug that escaping quotes in a string would not work. Added 
	support for using $-prefixed variable names in strings.
	* lib/Exscript/Execute.py: Added the builtin variable "response", that now
	includes the response of the last command.
	* lib/Exscript/Exscript.py: #-prefixed lines are now comments.

2007-09-20 Samuel Abels <http://debain.org>

	* lib/Exscript/*.py: Added missing copyleft headers.
	* lib/Exscript/stdlib/*: Reorganized the standard library such that every
	function has it's own file. Fixed sys.wait().
	* lib/Exscript/Parser.py: Fixed the debug argument of the constructor.

2007-09-19 Samuel Abels <http://debain.org>

	* *.py: Backported such that Python 2.2 is now also supported.
	* exscript.py: Load the protocol adapters dynamically, such that 
	SSH related modules are not required when Telnet is used.
	* lib/TerminalConnection/*.py: Further improved prompt recognition.

2007-09-12 Samuel Abels <http://debain.org>

	* lib/TerminalConnection/T*.py: Reworked the telnet adapter such that it
	supports negotiation. This means that a connection should now automatically
	choose a script-friendly terminal type. (e.g. one that uses no color control
	characters).
	* lib/Exscript/Loop.py: Fixed a bug that some operations would not work when
	accessing the iterator variable in the body of a loop tag.
	* lib/Exscript/Loop.py: Added support for "while" and "until" loops.