@@ -14,6 +14,3 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 class ExscriptException(Exception):
     pass
-
-class DeviceException(ExscriptException):
-    pass
