@@ -13,8 +13,7 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 import Exscript
-from Scope     import Scope
-from Exception import DeviceException
+from Scope import Scope
 
 class Try(Scope):
     def __init__(self, parser, parent):
@@ -37,7 +36,7 @@ class Try(Scope):
     def value(self):
         try:
             self.block.value()
-        except DeviceException, e:
+        except TransportException, e:
             return 1
         return 1
 
